--- a/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
@@ -16,11 +16,11 @@
     </ul>
 
     {{ if eq .Site.Language.LanguageName "English" }}
-        <p class="sidebar-p" style="color:black;"><b>I am currently in </b> <img class="sidebar-img" src=/img/us.gif></p>
-        <!-- <p class="sidebar-p">I will be back in <img class="sidebar-img" src=/img/us.gif> on 15/07/2019 </p> -->
+        <p class="sidebar-p" style="color:black;"><b>I am currently in </b> <img class="sidebar-img" src=/img/de.gif></p>
+        <p class="sidebar-p">I will be back in <img class="sidebar-img" src=/img/us.gif> on 11/10/2019 </p>
     {{ else }}
-        <p class="sidebar-p" style="color:black;"><b>Ich bin gerade in </b> <img class="sidebar-img" src=/img/us.gif></p>
-        <!-- <p class="sidebar-p">Ich komme zurück nach <img class="sidebar-img" src=/img/us.gif> am 15.07.2019</p> -->
+        <p class="sidebar-p" style="color:black;"><b>Ich bin gerade in </b> <img class="sidebar-img" src=/img/de.gif></p>
+        <p class="sidebar-p">Ich komme zurück nach <img class="sidebar-img" src=/img/us.gif> am 11.10.2019</p>
     {{ end }}
 
 
