Removed Google Web Fonts

--- a/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
@@ -16,9 +16,9 @@
     </ul>
 
     {{ if eq .Site.Language.LanguageName "English" }}
-        <p class="sidebar-p" style="color:black;"><b>I am currently in </b> <img class="sidebar-img" src=/img/us.gif></p>
+        <p class="sidebar-p" style="color:black;"><b>I am currently in </b> <img class="sidebar-img" src=/img/de.gif></p>
     {{ else }}
-        <p class="sidebar-p" style="color:black;"><b>Ich bin gerade in </b> <img class="sidebar-img" src=/img/us.gif></p>
+        <p class="sidebar-p" style="color:black;"><b>Ich bin gerade in </b> <img class="sidebar-img" src=/img/de.gif></p>
     {{ end }}
 
 
